// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationMembersView No Require Link does not have 2fa warning if user has 2fa 1`] = `
.glamor-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin-bottom: 30px;
}

.glamor-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-0 {
  display: inline-block;
  font-weight: bold;
  padding-bottom: 14px;
  border-bottom: 3px solid;
}

.glamor-61 {
  background: #fff;
  border: 1px solid;
  margin-bottom: 30px;
}

.glamor-14 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  background: padding:15px 0;
}

.glamor-13 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: 13px;
  margin: 0;
}

.glamor-11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-5 {
  box-sizing: border-box;
  width: 180px;
  padding-left: 16px;
  padding-right: 16px;
}

.glamor-7 {
  box-sizing: border-box;
  width: 100px;
  padding-left: 16px;
  padding-right: 16px;
}

.glamor-9 {
  box-sizing: border-box;
  width: 120px;
  padding-left: 16px;
  padding-right: 16px;
}

.glamor-28 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid;
}

.glamor-28:last-child {
  border: 0;
}

.glamor-15 {
  box-sizing: border-box;
  padding-left: 16px;
}

.glamor-20 {
  box-sizing: border-box;
  padding-left: 8px;
  padding-right: 16px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-17 {
  font-size: 16px;
}

.glamor-19 {
  font-size: 14px;
}

<OrganizationMembersView
  canAddMembers={false}
  canRemoveMembers={false}
  currentUser={
    Object {
      "email": "",
      "flags": Object {
        "sso:linked": false,
      },
      "id": "2",
      "name": "",
      "pending": false,
      "roleName": "",
      "user": Object {
        "email": "sentry2@test.com",
        "has2fa": true,
        "id": "2",
        "name": "Sentry 2 Name",
        "username": "Sentry 2 Username",
      },
    }
  }
  memberCanLeave={false}
  onLeave={[Function]}
  onRemove={[Function]}
  onSendInvite={[Function]}
  orgId="org-slug"
  orgName="Organization Name"
  params={
    Object {
      "orgId": "org-id",
    }
  }
  requireLink={false}
  routes={Array []}
  status=""
>
  <DocumentTitle
    title="Organization Name Members"
  >
    <div>
      <SettingsPageHeading
        action={
          <Link
            className="pull-right"
            disabled={false}
            size="small"
            title={undefined}
            to="new"
          >
            <span
              className="icon-plus"
            />
             
            Invite Member
          </Link>
        }
        label="Members"
      >
        <Styled(div)>
          <div
            className="glamor-2"
          >
            <Styled(div)>
              <div
                className="glamor-1"
              >
                <Styled(div)>
                  <div
                    className="glamor-0"
                  >
                    Members
                  </div>
                </Styled(div)>
              </div>
            </Styled(div)>
            <div>
              <Link
                className="pull-right"
                disabled={false}
                size="small"
                to="new"
              >
                <a
                  className="pull-right"
                  disabled={false}
                  href="new"
                  size="small"
                >
                  <span
                    className="icon-plus"
                  />
                   
                  Invite Member
                </a>
              </Link>
            </div>
          </div>
        </Styled(div)>
      </SettingsPageHeading>
      <OrganizationAccessRequests
        accessRequestBusy={Map {}}
        onApprove={[Function]}
        onDeny={[Function]}
        requestList={Array []}
      />
      <Styled(div)>
        <div
          className="glamor-61"
        >
          <PanelHeader
            disablePadding={true}
          >
            <Styled(div)
              disablePadding={true}
            >
              <div
                className="glamor-14"
              >
                <Styled(div)>
                  <div
                    className="glamor-13"
                  >
                    <Flex
                      align="center"
                    >
                      <Base
                        align="center"
                        className="glamor-11"
                      >
                        <div
                          className="glamor-11"
                          is={null}
                        >
                          <Box
                            flex="1"
                            px={2}
                          >
                            <Base
                              className="glamor-3"
                              flex="1"
                              px={2}
                            >
                              <div
                                className="glamor-3"
                                is={null}
                              >
                                Member
                              </div>
                            </Base>
                          </Box>
                          <Box
                            px={2}
                            w={180}
                          >
                            <Base
                              className="glamor-5"
                              px={2}
                              w={180}
                            >
                              <div
                                className="glamor-5"
                                is={null}
                              >
                                Status
                              </div>
                            </Base>
                          </Box>
                          <Box
                            px={2}
                            w={100}
                          >
                            <Base
                              className="glamor-7"
                              px={2}
                              w={100}
                            >
                              <div
                                className="glamor-7"
                                is={null}
                              >
                                Role
                              </div>
                            </Base>
                          </Box>
                          <Box
                            px={2}
                            w={120}
                          >
                            <Base
                              className="glamor-9"
                              px={2}
                              w={120}
                            >
                              <div
                                className="glamor-9"
                                is={null}
                              >
                                Actions
                              </div>
                            </Base>
                          </Box>
                        </div>
                      </Base>
                    </Flex>
                  </div>
                </Styled(div)>
              </div>
            </Styled(div)>
          </PanelHeader>
          <Styled(div)>
            <div
              className="glamor-60"
            >
              <OrganizationMemberRow
                canAddMembers={true}
                canRemoveMembers={false}
                currentUser={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                member={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "1",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry1@test.com",
                      "has2fa": false,
                      "id": "1",
                      "name": "Sentry 1 Name",
                      "username": "Sentry 1 Username",
                    },
                  }
                }
                memberCanLeave={false}
                onLeave={[Function]}
                onRemove={[Function]}
                onSendInvite={[Function]}
                orgId="org-id"
                orgName="Organization Name"
                params={
                  Object {
                    "orgId": "org-id",
                  }
                }
                requireLink={false}
                routes={Array []}
              >
                <Styled(Base)
                  align="center"
                  py={1}
                >
                  <Base
                    align="center"
                    className="glamor-28"
                    py={1}
                  >
                    <div
                      className="glamor-28"
                      is={null}
                    >
                      <Box
                        pl={2}
                      >
                        <Base
                          className="glamor-15"
                          pl={2}
                        >
                          <div
                            className="glamor-15"
                            is={null}
                          >
                            <Avatar
                              className="avatar"
                              gravatar={true}
                              size={64}
                              style={
                                Object {
                                  "height": 32,
                                  "width": 32,
                                }
                              }
                              user={
                                Object {
                                  "email": "sentry1@test.com",
                                  "has2fa": false,
                                  "id": "1",
                                  "name": "Sentry 1 Name",
                                  "username": "Sentry 1 Username",
                                }
                              }
                            >
                              <span
                                className="avatar"
                                style={
                                  Object {
                                    "height": 32,
                                    "width": 32,
                                  }
                                }
                              >
                                <img
                                  onError={[Function]}
                                  onLoad={[Function]}
                                  src="undefined/avatar/c68ca8af553301ae11c5607b8bb672b4?s=64&d=blank"
                                />
                              </span>
                            </Avatar>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        flex="1"
                        pl={1}
                        pr={2}
                      >
                        <Base
                          className="glamor-20"
                          flex="1"
                          pl={1}
                          pr={2}
                        >
                          <div
                            className="glamor-20"
                            is={null}
                          >
                            <h5
                              style={
                                Object {
                                  "margin": "0 0 3px",
                                }
                              }
                            >
                              <Styled(Link)
                                to="1"
                              >
                                <Link
                                  className="glamor-17"
                                  to="1"
                                >
                                  <a
                                    className="glamor-17"
                                    href="1"
                                  />
                                </Link>
                              </Styled(Link)>
                            </h5>
                            <Styled(div)>
                              <div
                                className="glamor-19"
                              />
                            </Styled(div)>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={180}
                      >
                        <Base
                          className="glamor-5"
                          px={2}
                          w={180}
                        >
                          <div
                            className="glamor-5"
                            is={null}
                          >
                            <div>
                              <span
                                className="icon-exclamation tip"
                                style={
                                  Object {
                                    "color": "#B64236",
                                  }
                                }
                                title="Two-factor auth not enabled"
                              />
                            </div>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={100}
                      >
                        <Base
                          className="glamor-7"
                          px={2}
                          w={100}
                        >
                          <div
                            className="glamor-7"
                            is={null}
                          />
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={120}
                      >
                        <Base
                          className="glamor-9"
                          px={2}
                          w={120}
                        >
                          <div
                            className="glamor-9"
                            is={null}
                          >
                            <Button
                              disabled={true}
                              size="small"
                              title="You cannot leave the organization as you are the only owner."
                            >
                              <button
                                className="button tip button-default button-sm button-disabled"
                                disabled={true}
                                onClick={[Function]}
                                role="button"
                              >
                                <FlowLayout
                                  truncate={false}
                                >
                                  <div
                                    className="flow-layout"
                                  >
                                    <span
                                      className="button-label"
                                    >
                                      <span
                                        className="icon icon-exit"
                                      />
                                       
                                      Leave
                                    </span>
                                  </div>
                                </FlowLayout>
                              </button>
                            </Button>
                          </div>
                        </Base>
                      </Box>
                    </div>
                  </Base>
                </Styled(Base)>
              </OrganizationMemberRow>
              <OrganizationMemberRow
                canAddMembers={true}
                canRemoveMembers={false}
                currentUser={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                member={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                memberCanLeave={false}
                onLeave={[Function]}
                onRemove={[Function]}
                onSendInvite={[Function]}
                orgId="org-id"
                orgName="Organization Name"
                params={
                  Object {
                    "orgId": "org-id",
                  }
                }
                requireLink={false}
                routes={Array []}
              >
                <Styled(Base)
                  align="center"
                  py={1}
                >
                  <Base
                    align="center"
                    className="glamor-28"
                    py={1}
                  >
                    <div
                      className="glamor-28"
                      is={null}
                    >
                      <Box
                        pl={2}
                      >
                        <Base
                          className="glamor-15"
                          pl={2}
                        >
                          <div
                            className="glamor-15"
                            is={null}
                          >
                            <Avatar
                              className="avatar"
                              gravatar={true}
                              size={64}
                              style={
                                Object {
                                  "height": 32,
                                  "width": 32,
                                }
                              }
                              user={
                                Object {
                                  "email": "sentry2@test.com",
                                  "has2fa": true,
                                  "id": "2",
                                  "name": "Sentry 2 Name",
                                  "username": "Sentry 2 Username",
                                }
                              }
                            >
                              <span
                                className="avatar"
                                style={
                                  Object {
                                    "height": 32,
                                    "width": 32,
                                  }
                                }
                              >
                                <img
                                  onError={[Function]}
                                  onLoad={[Function]}
                                  src="undefined/avatar/4eca4e68b0a900e542fdf17e57d04dcd?s=64&d=blank"
                                />
                              </span>
                            </Avatar>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        flex="1"
                        pl={1}
                        pr={2}
                      >
                        <Base
                          className="glamor-20"
                          flex="1"
                          pl={1}
                          pr={2}
                        >
                          <div
                            className="glamor-20"
                            is={null}
                          >
                            <h5
                              style={
                                Object {
                                  "margin": "0 0 3px",
                                }
                              }
                            >
                              <Styled(Link)
                                to="2"
                              >
                                <Link
                                  className="glamor-17"
                                  to="2"
                                >
                                  <a
                                    className="glamor-17"
                                    href="2"
                                  />
                                </Link>
                              </Styled(Link)>
                            </h5>
                            <Styled(div)>
                              <div
                                className="glamor-19"
                              />
                            </Styled(div)>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={180}
                      >
                        <Base
                          className="glamor-5"
                          px={2}
                          w={180}
                        >
                          <div
                            className="glamor-5"
                            is={null}
                          >
                            <div>
                              <span
                                className="icon-check"
                                style={
                                  Object {
                                    "color": "green",
                                  }
                                }
                              />
                            </div>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={100}
                      >
                        <Base
                          className="glamor-7"
                          px={2}
                          w={100}
                        >
                          <div
                            className="glamor-7"
                            is={null}
                          />
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={120}
                      >
                        <Base
                          className="glamor-9"
                          px={2}
                          w={120}
                        >
                          <div
                            className="glamor-9"
                            is={null}
                          >
                            <Button
                              disabled={true}
                              size="small"
                              title="You cannot leave the organization as you are the only owner."
                            >
                              <button
                                className="button tip button-default button-sm button-disabled"
                                disabled={true}
                                onClick={[Function]}
                                role="button"
                              >
                                <FlowLayout
                                  truncate={false}
                                >
                                  <div
                                    className="flow-layout"
                                  >
                                    <span
                                      className="button-label"
                                    >
                                      <span
                                        className="icon icon-exit"
                                      />
                                       
                                      Leave
                                    </span>
                                  </div>
                                </FlowLayout>
                              </button>
                            </Button>
                          </div>
                        </Base>
                      </Box>
                    </div>
                  </Base>
                </Styled(Base)>
              </OrganizationMemberRow>
              <OrganizationMemberRow
                canAddMembers={true}
                canRemoveMembers={false}
                currentUser={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                member={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": true,
                    },
                    "id": "3",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry3@test.com",
                      "has2fa": true,
                      "id": "3",
                      "name": "Sentry 3 Name",
                      "username": "Sentry 3 Username",
                    },
                  }
                }
                memberCanLeave={false}
                onLeave={[Function]}
                onRemove={[Function]}
                onSendInvite={[Function]}
                orgId="org-id"
                orgName="Organization Name"
                params={
                  Object {
                    "orgId": "org-id",
                  }
                }
                requireLink={false}
                routes={Array []}
              >
                <Styled(Base)
                  align="center"
                  py={1}
                >
                  <Base
                    align="center"
                    className="glamor-28"
                    py={1}
                  >
                    <div
                      className="glamor-28"
                      is={null}
                    >
                      <Box
                        pl={2}
                      >
                        <Base
                          className="glamor-15"
                          pl={2}
                        >
                          <div
                            className="glamor-15"
                            is={null}
                          >
                            <Avatar
                              className="avatar"
                              gravatar={true}
                              size={64}
                              style={
                                Object {
                                  "height": 32,
                                  "width": 32,
                                }
                              }
                              user={
                                Object {
                                  "email": "sentry3@test.com",
                                  "has2fa": true,
                                  "id": "3",
                                  "name": "Sentry 3 Name",
                                  "username": "Sentry 3 Username",
                                }
                              }
                            >
                              <span
                                className="avatar"
                                style={
                                  Object {
                                    "height": 32,
                                    "width": 32,
                                  }
                                }
                              >
                                <img
                                  onError={[Function]}
                                  onLoad={[Function]}
                                  src="undefined/avatar/40d78e2a4587a53a171944ffe71ee3d4?s=64&d=blank"
                                />
                              </span>
                            </Avatar>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        flex="1"
                        pl={1}
                        pr={2}
                      >
                        <Base
                          className="glamor-20"
                          flex="1"
                          pl={1}
                          pr={2}
                        >
                          <div
                            className="glamor-20"
                            is={null}
                          >
                            <h5
                              style={
                                Object {
                                  "margin": "0 0 3px",
                                }
                              }
                            >
                              <Styled(Link)
                                to="3"
                              >
                                <Link
                                  className="glamor-17"
                                  to="3"
                                >
                                  <a
                                    className="glamor-17"
                                    href="3"
                                  />
                                </Link>
                              </Styled(Link)>
                            </h5>
                            <Styled(div)>
                              <div
                                className="glamor-19"
                              />
                            </Styled(div)>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={180}
                      >
                        <Base
                          className="glamor-5"
                          px={2}
                          w={180}
                        >
                          <div
                            className="glamor-5"
                            is={null}
                          >
                            <div>
                              <span
                                className="icon-check"
                                style={
                                  Object {
                                    "color": "green",
                                  }
                                }
                              />
                            </div>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={100}
                      >
                        <Base
                          className="glamor-7"
                          px={2}
                          w={100}
                        >
                          <div
                            className="glamor-7"
                            is={null}
                          />
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={120}
                      >
                        <Base
                          className="glamor-9"
                          px={2}
                          w={120}
                        >
                          <div
                            className="glamor-9"
                            is={null}
                          >
                            <Button
                              disabled={true}
                              size="small"
                              title="You cannot leave the organization as you are the only owner."
                            >
                              <button
                                className="button tip button-default button-sm button-disabled"
                                disabled={true}
                                onClick={[Function]}
                                role="button"
                              >
                                <FlowLayout
                                  truncate={false}
                                >
                                  <div
                                    className="flow-layout"
                                  >
                                    <span
                                      className="button-label"
                                    >
                                      <span
                                        className="icon icon-exit"
                                      />
                                       
                                      Leave
                                    </span>
                                  </div>
                                </FlowLayout>
                              </button>
                            </Button>
                          </div>
                        </Base>
                      </Box>
                    </div>
                  </Base>
                </Styled(Base)>
              </OrganizationMemberRow>
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </DocumentTitle>
</OrganizationMembersView>
`;

exports[`OrganizationMembersView Require Link does not have 2fa warning if user has 2fa 1`] = `
.glamor-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 14px;
  box-shadow: inset 0 -1px 0;
  margin-bottom: 30px;
}

.glamor-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-0 {
  display: inline-block;
  font-weight: bold;
  padding-bottom: 14px;
  border-bottom: 3px solid;
}

.glamor-61 {
  background: #fff;
  border: 1px solid;
  margin-bottom: 30px;
}

.glamor-14 {
  border-bottom: 1px solid;
  border-radius: 0 0;
  background: padding:15px 0;
}

.glamor-13 {
  font-size: 12px;
  font-weight: 600;
  text-transform: uppercase;
  margin-bottom: 20px;
  font-size: 13px;
  margin: 0;
}

.glamor-11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.glamor-3 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-5 {
  box-sizing: border-box;
  width: 180px;
  padding-left: 16px;
  padding-right: 16px;
}

.glamor-7 {
  box-sizing: border-box;
  width: 100px;
  padding-left: 16px;
  padding-right: 16px;
}

.glamor-9 {
  box-sizing: border-box;
  width: 120px;
  padding-left: 16px;
  padding-right: 16px;
}

.glamor-28 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid;
}

.glamor-28:last-child {
  border: 0;
}

.glamor-15 {
  box-sizing: border-box;
  padding-left: 16px;
}

.glamor-20 {
  box-sizing: border-box;
  padding-left: 8px;
  padding-right: 16px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.glamor-17 {
  font-size: 16px;
}

.glamor-19 {
  font-size: 14px;
}

<OrganizationMembersView
  canAddMembers={false}
  canRemoveMembers={false}
  currentUser={
    Object {
      "email": "",
      "flags": Object {
        "sso:linked": false,
      },
      "id": "2",
      "name": "",
      "pending": false,
      "roleName": "",
      "user": Object {
        "email": "sentry2@test.com",
        "has2fa": true,
        "id": "2",
        "name": "Sentry 2 Name",
        "username": "Sentry 2 Username",
      },
    }
  }
  memberCanLeave={false}
  onLeave={[Function]}
  onRemove={[Function]}
  onSendInvite={[Function]}
  orgId="org-slug"
  orgName="Organization Name"
  params={
    Object {
      "orgId": "org-id",
    }
  }
  requireLink={false}
  routes={Array []}
  status=""
>
  <DocumentTitle
    title="Organization Name Members"
  >
    <div>
      <SettingsPageHeading
        action={
          <Link
            className="pull-right"
            disabled={false}
            size="small"
            title={undefined}
            to="new"
          >
            <span
              className="icon-plus"
            />
             
            Invite Member
          </Link>
        }
        label="Members"
      >
        <Styled(div)>
          <div
            className="glamor-2"
          >
            <Styled(div)>
              <div
                className="glamor-1"
              >
                <Styled(div)>
                  <div
                    className="glamor-0"
                  >
                    Members
                  </div>
                </Styled(div)>
              </div>
            </Styled(div)>
            <div>
              <Link
                className="pull-right"
                disabled={false}
                size="small"
                to="new"
              >
                <a
                  className="pull-right"
                  disabled={false}
                  href="new"
                  size="small"
                >
                  <span
                    className="icon-plus"
                  />
                   
                  Invite Member
                </a>
              </Link>
            </div>
          </div>
        </Styled(div)>
      </SettingsPageHeading>
      <OrganizationAccessRequests
        accessRequestBusy={Map {}}
        onApprove={[Function]}
        onDeny={[Function]}
        requestList={Array []}
      />
      <Styled(div)>
        <div
          className="glamor-61"
        >
          <PanelHeader
            disablePadding={true}
          >
            <Styled(div)
              disablePadding={true}
            >
              <div
                className="glamor-14"
              >
                <Styled(div)>
                  <div
                    className="glamor-13"
                  >
                    <Flex
                      align="center"
                    >
                      <Base
                        align="center"
                        className="glamor-11"
                      >
                        <div
                          className="glamor-11"
                          is={null}
                        >
                          <Box
                            flex="1"
                            px={2}
                          >
                            <Base
                              className="glamor-3"
                              flex="1"
                              px={2}
                            >
                              <div
                                className="glamor-3"
                                is={null}
                              >
                                Member
                              </div>
                            </Base>
                          </Box>
                          <Box
                            px={2}
                            w={180}
                          >
                            <Base
                              className="glamor-5"
                              px={2}
                              w={180}
                            >
                              <div
                                className="glamor-5"
                                is={null}
                              >
                                Status
                              </div>
                            </Base>
                          </Box>
                          <Box
                            px={2}
                            w={100}
                          >
                            <Base
                              className="glamor-7"
                              px={2}
                              w={100}
                            >
                              <div
                                className="glamor-7"
                                is={null}
                              >
                                Role
                              </div>
                            </Base>
                          </Box>
                          <Box
                            px={2}
                            w={120}
                          >
                            <Base
                              className="glamor-9"
                              px={2}
                              w={120}
                            >
                              <div
                                className="glamor-9"
                                is={null}
                              >
                                Actions
                              </div>
                            </Base>
                          </Box>
                        </div>
                      </Base>
                    </Flex>
                  </div>
                </Styled(div)>
              </div>
            </Styled(div)>
          </PanelHeader>
          <Styled(div)>
            <div
              className="glamor-60"
            >
              <OrganizationMemberRow
                canAddMembers={true}
                canRemoveMembers={false}
                currentUser={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                member={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "1",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry1@test.com",
                      "has2fa": false,
                      "id": "1",
                      "name": "Sentry 1 Name",
                      "username": "Sentry 1 Username",
                    },
                  }
                }
                memberCanLeave={false}
                onLeave={[Function]}
                onRemove={[Function]}
                onSendInvite={[Function]}
                orgId="org-id"
                orgName="Organization Name"
                params={
                  Object {
                    "orgId": "org-id",
                  }
                }
                requireLink={true}
                routes={Array []}
              >
                <Styled(Base)
                  align="center"
                  py={1}
                >
                  <Base
                    align="center"
                    className="glamor-28"
                    py={1}
                  >
                    <div
                      className="glamor-28"
                      is={null}
                    >
                      <Box
                        pl={2}
                      >
                        <Base
                          className="glamor-15"
                          pl={2}
                        >
                          <div
                            className="glamor-15"
                            is={null}
                          >
                            <Avatar
                              className="avatar"
                              gravatar={true}
                              size={64}
                              style={
                                Object {
                                  "height": 32,
                                  "width": 32,
                                }
                              }
                              user={
                                Object {
                                  "email": "sentry1@test.com",
                                  "has2fa": false,
                                  "id": "1",
                                  "name": "Sentry 1 Name",
                                  "username": "Sentry 1 Username",
                                }
                              }
                            >
                              <span
                                className="avatar"
                                style={
                                  Object {
                                    "height": 32,
                                    "width": 32,
                                  }
                                }
                              >
                                <img
                                  onError={[Function]}
                                  onLoad={[Function]}
                                  src="undefined/avatar/c68ca8af553301ae11c5607b8bb672b4?s=64&d=blank"
                                />
                              </span>
                            </Avatar>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        flex="1"
                        pl={1}
                        pr={2}
                      >
                        <Base
                          className="glamor-20"
                          flex="1"
                          pl={1}
                          pr={2}
                        >
                          <div
                            className="glamor-20"
                            is={null}
                          >
                            <h5
                              style={
                                Object {
                                  "margin": "0 0 3px",
                                }
                              }
                            >
                              <Styled(Link)
                                to="1"
                              >
                                <Link
                                  className="glamor-17"
                                  to="1"
                                >
                                  <a
                                    className="glamor-17"
                                    href="1"
                                  />
                                </Link>
                              </Styled(Link)>
                            </h5>
                            <Styled(div)>
                              <div
                                className="glamor-19"
                              />
                            </Styled(div)>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={180}
                      >
                        <Base
                          className="glamor-5"
                          px={2}
                          w={180}
                        >
                          <div
                            className="glamor-5"
                            is={null}
                          >
                            <div>
                              <div>
                                <strong>
                                  Missing SSO Link
                                </strong>
                              </div>
                              <Button
                                disabled={false}
                                onClick={[Function]}
                                priority="primary"
                                size="xsmall"
                                style={
                                  Object {
                                    "marginTop": 2,
                                    "padding": "0 4px",
                                  }
                                }
                              >
                                <button
                                  className="button button-primary button-xs"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                  style={
                                    Object {
                                      "marginTop": 2,
                                      "padding": "0 4px",
                                    }
                                  }
                                >
                                  <FlowLayout
                                    truncate={false}
                                  >
                                    <div
                                      className="flow-layout"
                                    >
                                      <span
                                        className="button-label"
                                      >
                                        Resend invite
                                      </span>
                                    </div>
                                  </FlowLayout>
                                </button>
                              </Button>
                            </div>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={100}
                      >
                        <Base
                          className="glamor-7"
                          px={2}
                          w={100}
                        >
                          <div
                            className="glamor-7"
                            is={null}
                          />
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={120}
                      >
                        <Base
                          className="glamor-9"
                          px={2}
                          w={120}
                        >
                          <div
                            className="glamor-9"
                            is={null}
                          >
                            <Button
                              disabled={true}
                              size="small"
                              title="You cannot leave the organization as you are the only owner."
                            >
                              <button
                                className="button tip button-default button-sm button-disabled"
                                disabled={true}
                                onClick={[Function]}
                                role="button"
                              >
                                <FlowLayout
                                  truncate={false}
                                >
                                  <div
                                    className="flow-layout"
                                  >
                                    <span
                                      className="button-label"
                                    >
                                      <span
                                        className="icon icon-exit"
                                      />
                                       
                                      Leave
                                    </span>
                                  </div>
                                </FlowLayout>
                              </button>
                            </Button>
                          </div>
                        </Base>
                      </Box>
                    </div>
                  </Base>
                </Styled(Base)>
              </OrganizationMemberRow>
              <OrganizationMemberRow
                canAddMembers={true}
                canRemoveMembers={false}
                currentUser={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                member={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                memberCanLeave={false}
                onLeave={[Function]}
                onRemove={[Function]}
                onSendInvite={[Function]}
                orgId="org-id"
                orgName="Organization Name"
                params={
                  Object {
                    "orgId": "org-id",
                  }
                }
                requireLink={true}
                routes={Array []}
              >
                <Styled(Base)
                  align="center"
                  py={1}
                >
                  <Base
                    align="center"
                    className="glamor-28"
                    py={1}
                  >
                    <div
                      className="glamor-28"
                      is={null}
                    >
                      <Box
                        pl={2}
                      >
                        <Base
                          className="glamor-15"
                          pl={2}
                        >
                          <div
                            className="glamor-15"
                            is={null}
                          >
                            <Avatar
                              className="avatar"
                              gravatar={true}
                              size={64}
                              style={
                                Object {
                                  "height": 32,
                                  "width": 32,
                                }
                              }
                              user={
                                Object {
                                  "email": "sentry2@test.com",
                                  "has2fa": true,
                                  "id": "2",
                                  "name": "Sentry 2 Name",
                                  "username": "Sentry 2 Username",
                                }
                              }
                            >
                              <span
                                className="avatar"
                                style={
                                  Object {
                                    "height": 32,
                                    "width": 32,
                                  }
                                }
                              >
                                <img
                                  onError={[Function]}
                                  onLoad={[Function]}
                                  src="undefined/avatar/4eca4e68b0a900e542fdf17e57d04dcd?s=64&d=blank"
                                />
                              </span>
                            </Avatar>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        flex="1"
                        pl={1}
                        pr={2}
                      >
                        <Base
                          className="glamor-20"
                          flex="1"
                          pl={1}
                          pr={2}
                        >
                          <div
                            className="glamor-20"
                            is={null}
                          >
                            <h5
                              style={
                                Object {
                                  "margin": "0 0 3px",
                                }
                              }
                            >
                              <Styled(Link)
                                to="2"
                              >
                                <Link
                                  className="glamor-17"
                                  to="2"
                                >
                                  <a
                                    className="glamor-17"
                                    href="2"
                                  />
                                </Link>
                              </Styled(Link)>
                            </h5>
                            <Styled(div)>
                              <div
                                className="glamor-19"
                              />
                            </Styled(div)>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={180}
                      >
                        <Base
                          className="glamor-5"
                          px={2}
                          w={180}
                        >
                          <div
                            className="glamor-5"
                            is={null}
                          >
                            <div>
                              <div>
                                <strong>
                                  Missing SSO Link
                                </strong>
                              </div>
                              <Button
                                disabled={false}
                                onClick={[Function]}
                                priority="primary"
                                size="xsmall"
                                style={
                                  Object {
                                    "marginTop": 2,
                                    "padding": "0 4px",
                                  }
                                }
                              >
                                <button
                                  className="button button-primary button-xs"
                                  disabled={false}
                                  onClick={[Function]}
                                  role="button"
                                  style={
                                    Object {
                                      "marginTop": 2,
                                      "padding": "0 4px",
                                    }
                                  }
                                >
                                  <FlowLayout
                                    truncate={false}
                                  >
                                    <div
                                      className="flow-layout"
                                    >
                                      <span
                                        className="button-label"
                                      >
                                        Resend invite
                                      </span>
                                    </div>
                                  </FlowLayout>
                                </button>
                              </Button>
                            </div>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={100}
                      >
                        <Base
                          className="glamor-7"
                          px={2}
                          w={100}
                        >
                          <div
                            className="glamor-7"
                            is={null}
                          />
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={120}
                      >
                        <Base
                          className="glamor-9"
                          px={2}
                          w={120}
                        >
                          <div
                            className="glamor-9"
                            is={null}
                          >
                            <Button
                              disabled={true}
                              size="small"
                              title="You cannot leave the organization as you are the only owner."
                            >
                              <button
                                className="button tip button-default button-sm button-disabled"
                                disabled={true}
                                onClick={[Function]}
                                role="button"
                              >
                                <FlowLayout
                                  truncate={false}
                                >
                                  <div
                                    className="flow-layout"
                                  >
                                    <span
                                      className="button-label"
                                    >
                                      <span
                                        className="icon icon-exit"
                                      />
                                       
                                      Leave
                                    </span>
                                  </div>
                                </FlowLayout>
                              </button>
                            </Button>
                          </div>
                        </Base>
                      </Box>
                    </div>
                  </Base>
                </Styled(Base)>
              </OrganizationMemberRow>
              <OrganizationMemberRow
                canAddMembers={true}
                canRemoveMembers={false}
                currentUser={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": false,
                    },
                    "id": "2",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry2@test.com",
                      "has2fa": true,
                      "id": "2",
                      "name": "Sentry 2 Name",
                      "username": "Sentry 2 Username",
                    },
                  }
                }
                member={
                  Object {
                    "email": "",
                    "flags": Object {
                      "sso:linked": true,
                    },
                    "id": "3",
                    "name": "",
                    "pending": false,
                    "roleName": "",
                    "user": Object {
                      "email": "sentry3@test.com",
                      "has2fa": true,
                      "id": "3",
                      "name": "Sentry 3 Name",
                      "username": "Sentry 3 Username",
                    },
                  }
                }
                memberCanLeave={false}
                onLeave={[Function]}
                onRemove={[Function]}
                onSendInvite={[Function]}
                orgId="org-id"
                orgName="Organization Name"
                params={
                  Object {
                    "orgId": "org-id",
                  }
                }
                requireLink={true}
                routes={Array []}
              >
                <Styled(Base)
                  align="center"
                  py={1}
                >
                  <Base
                    align="center"
                    className="glamor-28"
                    py={1}
                  >
                    <div
                      className="glamor-28"
                      is={null}
                    >
                      <Box
                        pl={2}
                      >
                        <Base
                          className="glamor-15"
                          pl={2}
                        >
                          <div
                            className="glamor-15"
                            is={null}
                          >
                            <Avatar
                              className="avatar"
                              gravatar={true}
                              size={64}
                              style={
                                Object {
                                  "height": 32,
                                  "width": 32,
                                }
                              }
                              user={
                                Object {
                                  "email": "sentry3@test.com",
                                  "has2fa": true,
                                  "id": "3",
                                  "name": "Sentry 3 Name",
                                  "username": "Sentry 3 Username",
                                }
                              }
                            >
                              <span
                                className="avatar"
                                style={
                                  Object {
                                    "height": 32,
                                    "width": 32,
                                  }
                                }
                              >
                                <img
                                  onError={[Function]}
                                  onLoad={[Function]}
                                  src="undefined/avatar/40d78e2a4587a53a171944ffe71ee3d4?s=64&d=blank"
                                />
                              </span>
                            </Avatar>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        flex="1"
                        pl={1}
                        pr={2}
                      >
                        <Base
                          className="glamor-20"
                          flex="1"
                          pl={1}
                          pr={2}
                        >
                          <div
                            className="glamor-20"
                            is={null}
                          >
                            <h5
                              style={
                                Object {
                                  "margin": "0 0 3px",
                                }
                              }
                            >
                              <Styled(Link)
                                to="3"
                              >
                                <Link
                                  className="glamor-17"
                                  to="3"
                                >
                                  <a
                                    className="glamor-17"
                                    href="3"
                                  />
                                </Link>
                              </Styled(Link)>
                            </h5>
                            <Styled(div)>
                              <div
                                className="glamor-19"
                              />
                            </Styled(div)>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={180}
                      >
                        <Base
                          className="glamor-5"
                          px={2}
                          w={180}
                        >
                          <div
                            className="glamor-5"
                            is={null}
                          >
                            <div>
                              <span
                                className="icon-check"
                                style={
                                  Object {
                                    "color": "green",
                                  }
                                }
                              />
                            </div>
                          </div>
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={100}
                      >
                        <Base
                          className="glamor-7"
                          px={2}
                          w={100}
                        >
                          <div
                            className="glamor-7"
                            is={null}
                          />
                        </Base>
                      </Box>
                      <Box
                        px={2}
                        w={120}
                      >
                        <Base
                          className="glamor-9"
                          px={2}
                          w={120}
                        >
                          <div
                            className="glamor-9"
                            is={null}
                          >
                            <Button
                              disabled={true}
                              size="small"
                              title="You cannot leave the organization as you are the only owner."
                            >
                              <button
                                className="button tip button-default button-sm button-disabled"
                                disabled={true}
                                onClick={[Function]}
                                role="button"
                              >
                                <FlowLayout
                                  truncate={false}
                                >
                                  <div
                                    className="flow-layout"
                                  >
                                    <span
                                      className="button-label"
                                    >
                                      <span
                                        className="icon icon-exit"
                                      />
                                       
                                      Leave
                                    </span>
                                  </div>
                                </FlowLayout>
                              </button>
                            </Button>
                          </div>
                        </Base>
                      </Box>
                    </div>
                  </Base>
                </Styled(Base)>
              </OrganizationMemberRow>
            </div>
          </Styled(div)>
        </div>
      </Styled(div)>
    </div>
  </DocumentTitle>
</OrganizationMembersView>
`;
